--- a/materials/oro/index.html
+++ b/materials/oro/index.html
@@ -93,7 +93,23 @@
         <div class="noteMeta">LAB NOTE · MATERIALS · ORO (Au)</div>
       </a>
 
-      <!-- Si querés, podés sumar más notas acá con el mismo patrón -->
+      <a class="noteCard" href="/materials/oro/procesos-de-formacion-del-oro-au.html">
+        <div class="noteTitle">Procesos de formación del oro (Au): sistemas primarios, secundarios y retrabajo mecánico</div>
+        <div class="noteDesc">
+          Sistemas hidrotermales, procesos supergénicos y retrabajo mecánico (placer). Relación proceso–registro material
+          y límites de inferencia.
+        </div>
+        <div class="noteMeta">LAB NOTE · MATERIALS · ORO (Au)</div>
+      </a>
+
+      <a class="noteCard" href="/materials/oro/errores-sistematicos-en-la-lectura-tecnica-del-oro-au.html">
+        <div class="noteTitle">Errores sistemáticos en la lectura técnica del oro (Au)</div>
+        <div class="noteDesc">
+          Sesgos frecuentes, falsas inferencias y uso incorrecto de señales aisladas. Criterios para lectura reproducible.
+        </div>
+        <div class="noteMeta">LAB NOTE · MATERIALS · ORO (Au)</div>
+      </a>
+
     </section>
 
     <div class="backRow">
