--- a/materials/oro/index.html
+++ b/materials/oro/index.html
@@ -62,9 +62,6 @@
 
     <h2 class="sectionTitle">Notas del material</h2>
 
-    <!-- IMPORTANTE:
-         Usamos el MISMO formato de cards que Lab Notes (noteCard/noteTitle/noteDesc/noteMeta)
-         para que se vea igual. -->
     <section class="notesGrid" aria-label="Notas del material: Oro">
 
       <a class="noteCard" href="/materials/oro/el-oro-au.html">
@@ -96,8 +93,8 @@
       <a class="noteCard" href="/materials/oro/procesos-de-formacion-del-oro-au.html">
         <div class="noteTitle">Procesos de formación del oro (Au): sistemas primarios, secundarios y retrabajo mecánico</div>
         <div class="noteDesc">
-          Sistemas hidrotermales, procesos supergénicos y retrabajo mecánico (placer). Relación proceso–registro material
-          y límites de inferencia.
+          Sistemas hidrotermales, procesos supergénicos y retrabajo mecánico (placer).
+          Relación proceso–registro material y límites de inferencia.
         </div>
         <div class="noteMeta">LAB NOTE · MATERIALS · ORO (Au)</div>
       </a>
@@ -105,7 +102,18 @@
       <a class="noteCard" href="/materials/oro/errores-sistematicos-en-la-lectura-tecnica-del-oro-au.html">
         <div class="noteTitle">Errores sistemáticos en la lectura técnica del oro (Au)</div>
         <div class="noteDesc">
-          Sesgos frecuentes, falsas inferencias y uso incorrecto de señales aisladas. Criterios para lectura reproducible.
+          Sesgos frecuentes, falsas inferencias y uso incorrecto de señales aisladas.
+          Criterios para lectura reproducible.
+        </div>
+        <div class="noteMeta">LAB NOTE · MATERIALS · ORO (Au)</div>
+      </a>
+
+      <!-- NUEVA: Glosario -->
+      <a class="noteCard" href="/materials/oro/glosario-tecnico-del-oro-au.html">
+        <div class="noteTitle">Glosario técnico del oro (Au)</div>
+        <div class="noteDesc">
+          Definiciones operativas (GIA-style) para lectura material del oro:
+          morfología, superficie, procesos y metodología.
         </div>
         <div class="noteMeta">LAB NOTE · MATERIALS · ORO (Au)</div>
       </a>
