--- a/materials/oro/glosario-tecnico-del-oro-au.html
+++ b/materials/oro/glosario-tecnico-del-oro-au.html
@@ -6,7 +6,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1">
 
   <title>Glosario técnico del oro (Au): definiciones operativas · LW Gems</title>
-  <meta name="description" content="Glosario técnico (GIA-style) del oro (Au). Definiciones operativas y reproducibles para lectura material: morfología, superficie, procesos y errores de interpretación.">
+  <meta name="description" content="Glosario técnico del oro (Au). Definiciones operativas y reproducibles para lectura material: morfología, superficie, procesos y errores de interpretación.">
   <meta name="robots" content="index,follow,max-image-preview:large,max-snippet:-1,max-video-preview:-1">
   <link rel="canonical" href="https://gold.lw-gems.com/materials/oro/glosario-tecnico-del-oro-au.html">
 
