--- a/materials/corindon/index.html
+++ b/materials/corindon/index.html
@@ -6,7 +6,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1">
 
   <title>Corindón (Al₂O₃) · Materials · Gold Node</title>
-  <meta name="description" content="Sub-perfil material: Corindón (Al₂O₃). Lectura técnica no comercial del corindón como sistema: estructura, defectos, crecimiento, superficie, procesos y criterios de lectura reproducible (zafiro/rubí como variedades).">
+  <meta name="description" content="Sub-perfil material: Corindón (Al₂O₃). Lectura técnica no comercial del corindón como sistema: estructura, crecimiento, superficie, procesos, errores y glosario técnico (rubí y zafiro como variedades).">
   <meta name="robots" content="index,follow,max-image-preview:large,max-snippet:-1,max-video-preview:-1">
   <link rel="canonical" href="https://gold.lw-gems.com/materials/corindon/">
 
@@ -19,6 +19,7 @@
 <body class="page-note">
   <a class="skip-link" href="#content">Saltar al contenido</a>
 
+  <!-- Header -->
   <header class="topbar">
     <div class="container">
       <div class="brand">
@@ -43,8 +44,8 @@
 
       <p class="lead">
         Sub-perfil material. Lectura técnica no comercial del corindón como sistema:
-        estructura, defectos, crecimiento y mecanismos que determinan propiedades observables
-        (zafiro/rubí como variedades).
+        estructura cristalina, crecimiento, superficies, procesos internos,
+        errores de lectura y glosario operativo.
       </p>
 
       <p class="muted small">
@@ -64,45 +65,63 @@
 
     <section class="notesGrid" aria-label="Notas del material: Corindón">
 
-      <!-- 1) BASE -->
+      <!-- 1 · BASE -->
       <a class="noteCard" href="/materials/corindon/estructura-cristalina-del-corindon-al2o3.html">
         <div class="noteTitle">Estructura cristalina del corindón (Al₂O₃)</div>
-        <div class="noteDesc">Estructura, anisotropías y consecuencias mecánicas/ópticas relevantes. Definiciones operativas y límites.</div>
+        <div class="noteDesc">
+          Organización cristalina, anisotropías y consecuencias mecánicas y ópticas observables.
+          Definiciones operativas y límites de inferencia.
+        </div>
         <div class="noteMeta">LAB NOTE · MATERIALS · CORINDÓN (Al₂O₃)</div>
       </a>
 
-      <!-- 2) MORFOLOGÍA -->
+      <!-- 2 · MORFOLOGÍA / CRECIMIENTO -->
       <a class="noteCard" href="/materials/corindon/crecimiento-cristalino-del-corindon-al2o3.html">
         <div class="noteTitle">Crecimiento cristalino del corindón (Al₂O₃)</div>
-        <div class="noteDesc">Entorno de crecimiento, cinética y huellas internas observables (zonación, bandas, inclusiones). Lectura reproducible.</div>
+        <div class="noteDesc">
+          Entorno de formación, cinética de crecimiento y huellas internas observables
+          (zonación, bandas, inclusiones).
+        </div>
         <div class="noteMeta">LAB NOTE · MATERIALS · CORINDÓN (Al₂O₃)</div>
       </a>
 
-      <!-- 3) SUPERFICIE -->
+      <!-- 3 · SUPERFICIE -->
       <a class="noteCard" href="/materials/corindon/superficies-y-micro-texturas-del-corindon-al2o3.html">
         <div class="noteTitle">Superficies y micro-texturas del corindón (Al₂O₃)</div>
-        <div class="noteDesc">Micro-texturas diagnósticas por crecimiento, abrasión/pulido, daño mecánico y tratamiento. Jerarquía de señales.</div>
+        <div class="noteDesc">
+          Micro-texturas asociadas a crecimiento, abrasión, pulido, daño mecánico
+          y modificaciones posteriores. Jerarquía de señales.
+        </div>
         <div class="noteMeta">LAB NOTE · MATERIALS · CORINDÓN (Al₂O₃)</div>
       </a>
 
-      <!-- 4) PROCESOS -->
+      <!-- 4 · PROCESOS -->
       <a class="noteCard" href="/materials/corindon/defectos-y-color-en-corindon-al2o3.html">
         <div class="noteTitle">Defectos y color en corindón (Al₂O₃)</div>
-        <div class="noteDesc">Impurezas, centros de color, relación con crecimiento y tratamiento. Diferenciación operativa de fenómenos.</div>
+        <div class="noteDesc">
+          Impurezas, centros de color, zonación cromática y relación con crecimiento
+          y modificaciones posteriores.
+        </div>
         <div class="noteMeta">LAB NOTE · MATERIALS · CORINDÓN (Al₂O₃)</div>
       </a>
 
-      <!-- 5) ERRORES -->
+      <!-- 5 · ERRORES -->
       <a class="noteCard" href="/materials/corindon/errores-sistematicos-en-la-lectura-tecnica-del-corindon-al2o3.html">
         <div class="noteTitle">Errores sistemáticos en la lectura técnica del corindón (Al₂O₃)</div>
-        <div class="noteDesc">Sesgos frecuentes, falsas inferencias y uso incorrecto de señales aisladas. Criterios para lectura reproducible.</div>
+        <div class="noteDesc">
+          Sesgos frecuentes, falsas inferencias y errores metodológicos
+          en la interpretación del corindón.
+        </div>
         <div class="noteMeta">LAB NOTE · MATERIALS · CORINDÓN (Al₂O₃)</div>
       </a>
 
-      <!-- 6) GLOSARIO -->
+      <!-- 6 · GLOSARIO -->
       <a class="noteCard" href="/materials/corindon/glosario-tecnico-del-corindon-al2o3.html">
         <div class="noteTitle">Glosario técnico del corindón (Al₂O₃)</div>
-        <div class="noteDesc">Definiciones operativas (GIA-style) para estructura, crecimiento, defectos, color, superficie y metodología.</div>
+        <div class="noteDesc">
+          Definiciones operativas para estructura, crecimiento, defectos,
+          color, superficie y metodología de lectura.
+        </div>
         <div class="noteMeta">LAB NOTE · MATERIALS · CORINDÓN (Al₂O₃)</div>
       </a>
 
