--- a/materials/corindon/estructura-cristalina-del-corindon-al2o3.html
+++ b/materials/corindon/estructura-cristalina-del-corindon-al2o3.html
@@ -6,7 +6,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1">
 
   <title>Estructura cristalina del corindón (Al₂O₃): anisotropías y consecuencias observables · LW Gems</title>
-  <meta name="description" content="Nota técnica (GIA-style): estructura cristalina del corindón (Al₂O₃), anisotropía, planos cristalográficos y consecuencias mecánicas/ópticas observables. Definiciones operativas y límites de interpretación.">
+  <meta name="description" content="Nota técnica: estructura cristalina del corindón (Al₂O₃), anisotropía, planos cristalográficos y consecuencias mecánicas/ópticas observables. Definiciones operativas y límites de interpretación.">
   <meta name="robots" content="index,follow,max-image-preview:large,max-snippet:-1,max-video-preview:-1">
   <link rel="canonical" href="https://gold.lw-gems.com/materials/corindon/estructura-cristalina-del-corindon-al2o3.html">
 
