--- a/materials/corindon/crecimiento-cristalino-del-corindon-al2o3.html
+++ b/materials/corindon/crecimiento-cristalino-del-corindon-al2o3.html
@@ -6,7 +6,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1">
 
   <title>Crecimiento cristalino del corindón (Al₂O₃): cinética, entorno y huellas internas · LW Gems</title>
-  <meta name="description" content="Nota técnica (GIA-style): crecimiento cristalino del corindón (Al₂O₃). Entorno, cinética, direcciones preferentes y huellas internas observables (zonación, bandas, inclusiones). Límites de interpretación.">
+  <meta name="description" content="Nota técnica : crecimiento cristalino del corindón (Al₂O₃). Entorno, cinética, direcciones preferentes y huellas internas observables (zonación, bandas, inclusiones). Límites de interpretación.">
   <meta name="robots" content="index,follow,max-image-preview:large,max-snippet:-1,max-video-preview:-1">
   <link rel="canonical" href="https://gold.lw-gems.com/materials/corindon/crecimiento-cristalino-del-corindon-al2o3.html">
 
