--- a/materials/corindon/estructura-cristalina-del-corindon-al2o3.html
+++ b/materials/corindon/estructura-cristalina-del-corindon-al2o3.html
@@ -104,7 +104,7 @@
       <h1>Estructura cristalina del corindón (Al₂O₃): anisotropías y consecuencias observables</h1>
 
       <p class="lead">
-        Nota técnica (GIA-style) sobre la estructura cristalina del corindón (Al₂O₃) y cómo su anisotropía
+        Nota técnica sobre la estructura cristalina del corindón (Al₂O₃) y cómo su anisotropía
         se manifiesta en propiedades mecánicas y ópticas observables. Se definen términos operativos y límites
         de inferencia aplicables a lectura material (zafiro/rubí como variedades).
       </p>
