--- a/materials/corindon/crecimiento-cristalino-del-corindon-al2o3.html
+++ b/materials/corindon/crecimiento-cristalino-del-corindon-al2o3.html
@@ -104,7 +104,7 @@
       <h1>Crecimiento cristalino del corindón (Al₂O₃): cinética, entorno y huellas internas</h1>
 
       <p class="lead">
-        Nota técnica (GIA-style) sobre el crecimiento cristalino del corindón (Al₂O₃).
+        Nota técnica sobre el crecimiento cristalino del corindón (Al₂O₃).
         Se describen el entorno de crecimiento, la cinética y las huellas internas
         observables (zonación, bandas, inclusiones), con criterios operativos y límites
         de inferencia aplicables a lectura material (zafiro/rubí como variedades).
