--- a/materials/oro/glosario-tecnico-del-oro-au.html
+++ b/materials/oro/glosario-tecnico-del-oro-au.html
@@ -20,7 +20,7 @@
 
   <meta name="twitter:card" content="summary_large_image">
   <meta name="twitter:title" content="Glosario técnico del oro (Au)">
-  <meta name="twitter:description" content="Glosario técnico (GIA-style) para lectura material del oro (Au).">
+  <meta name="twitter:description" content="Glosario técnico para lectura material del oro (Au).">
 
   <meta name="lw:note-version" content="1.0.0">
   <meta name="lw:note-status" content="canonical">
