--- a/materials/oro/el-oro-au.html
+++ b/materials/oro/el-oro-au.html
@@ -15,7 +15,7 @@
   <meta property="og:type" content="article">
   <meta property="og:site_name" content="LW Gems">
   <meta property="og:title" content="El oro (Au): definición material, propiedades físicas y criterios de lectura técnica">
-  <meta property="og:description" content="Nota técnica base (GIA-style): propiedades físicas del oro (Au), superficie como plano de observación, influencia composicional y límites de interpretación.">
+  <meta property="og:description" content="Nota técnica base: propiedades físicas del oro (Au), superficie como plano de observación, influencia composicional y límites de interpretación.">
   <meta property="og:url" content="https://gold.lw-gems.com/materials/oro/el-oro-au.html">
 
   <meta name="twitter:card" content="summary_large_image">
